RESOLVED FIXED305818
[blocks-in-inline] wpt.fyi/runs paints too much
https://bugs.webkit.org/show_bug.cgi?id=305818
Summary [blocks-in-inline] wpt.fyi/runs paints too much
Antti Koivisto
Reported 2026-01-19 23:42:53 PST
1. Load https://wpt.fyi/runs 2. Click the “Edit” button to the right of “Showing the latest master test runs for the default product set” 3. Click the “Add Product” button a few times -> observe the large table painting fully
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-19 23:43:17 PST
Antti Koivisto
Comment 2 2026-01-20 00:36:47 PST
EWS
Comment 3 2026-01-20 05:06:55 PST
Committed 305878@main (b9b68de2b21d): <https://commits.webkit.org/305878@main> Reviewed commits have been landed. Closing PR #56882 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.