Cherry-pick b9b68de2b21d. rdar://168699755

[blocks-in-inline] wpt.fyi/runs paints too much
    https://bugs.webkit.org/show_bug.cgi?id=305818
    rdar://168483436

    Reviewed by Alan Baradlay.

    With blocks-in-inline enabled we sometimes repaint more than before.

    Test: fast/repaint/table-in-inline-repaint.html
    * LayoutTests/fast/repaint/table-in-inline-repaint-expected.txt: Added.
    * LayoutTests/fast/repaint/table-in-inline-repaint.html: Added.
    * Source/WebCore/rendering/RenderBlockFlow.cpp:
    (WebCore::RenderBlockFlow::layoutSimpleBlockContentInInline):

    Disabllow tables from fast path as there is a bad interaction with their painting
    that does not exist on normal path.

    (WebCore::RenderBlockFlow::markInlineContentDirtyForLayout):

    Don't mark block content with relative units as needing relayout. It is not needed for
    block layout and dirty layout will force repaint.

    Canonical link: https://commits.webkit.org/305878@main

Identifier: 305413.100@safari-7624-branch